fixed alignment with map and photo and changed position of price range label

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
 
+.photo-container {
+  width: 100%;
+  padding-top: 75%; /* 4:3 aspect ratio (adjust as needed) */
+  position: relative;
+  overflow: hidden;
+}
+
+.photo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .map-container {
-  height: 400px;
-  }
+  width: 100%;
+  padding-top: 75%; /* 4:3 aspect ratio (adjust as needed) */
+  position: relative;
+}
 
 .sidebar {
   background-color: rgba(35, 55, 75, 0.9);
